[package]
name = "hatch_result"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A result-like struct that returns on Ok, instead of on Err when ? operator is used"
readme = "README.md"
keywords = ["result", "ok-early", "from_residual", "question-mark"]
categories = ["rust-patterns"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
